[GTK] Fix compilation errors for the GTK2 plugin process https://bugs.webkit.org/show_bug.cgi?id=199000

Reviewed by Michael Catanzaro.

* Shared/gtk/WebEventFactory.cpp: Use the GdkEvent union fields
when directly accessing event struct fields.
(WebKit::buttonForEvent):
(WebKit::WebEventFactory::createWebMouseEvent):
(WebKit::WebEventFactory::createWebKeyboardEvent):


Canonical link: https://commits.webkit.org/212989@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246597 268f45cc-cd09-0410-ab3c-d52691b4dbfc